--- a/Pustok_Project/Views/Shared/_Layout.cshtml
+++ b/Pustok_Project/Views/Shared/_Layout.cshtml
@@ -90,18 +90,7 @@
                                     </a>
                                     @* CATEGORY COMPONENT*@
                                     <ul class="category-menu">
-                                        <li class="cat-item has-children">
-                                            <a href="#">Arts & Photography</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="#">Bags & Cases</a></li>
-                                                <li><a href="#">Binoculars & Scopes</a></li>
-                                                <li><a href="#">Digital Cameras</a></li>
-                                                <li><a href="#">Film Photography</a></li>
-                                                <li><a href="#">Lighting & Studio</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="cat-item"><a href="#">Perfomance Filters</a></li>
-
+                                        @await Component.InvokeAsync("Category")
                                     </ul>
                                 </div>
                             </nav>
@@ -202,17 +191,7 @@
                                     </a>
                                     <ul class="category-menu">
                                         @* MOBILE CATEGORIES *@
-                                        <li class="cat-item has-children">
-                                            <a href="#">Arts & Photography</a>
-                                            <ul class="sub-menu">
-                                                <li><a href="#">Bags & Cases</a></li>
-                                                <li><a href="#">Binoculars & Scopes</a></li>
-                                                <li><a href="#">Digital Cameras</a></li>
-                                                <li><a href="#">Film Photography</a></li>
-                                                <li><a href="#">Lighting & Studio</a></li>
-                                            </ul>
-                                        </li>
-                                        <li class="cat-item"><a href="#">Perfomance Filters</a></li>
+                                        @await Component.InvokeAsync("Category")
                                     </ul>
                                 </div>
                             </nav>
