--- a/Pustok_Project/Views/_ViewImports.cshtml
+++ b/Pustok_Project/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
-﻿@using Pustok_Project
+﻿@using Pustok_Project.Models
+@using Pustok_Project
 @using Pustok_Project.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
