--- a/Pustok_Project/Views/Account/Login.cshtml
+++ b/Pustok_Project/Views/Account/Login.cshtml
@@ -43,7 +43,7 @@
                             </div>
                             <div class="col-md-12">
                                 <button type="submit" class="btn btn-outlined">Login</button>
-                                <div asp-validation-summary="ModelOnly"></div>
+                                <div class="text-danger" asp-validation-summary="ModelOnly"></div>
                             </div>
                         </div>
                     </div>
