--- a/Pustok_Project/Views/Shared/_Layout.cshtml
+++ b/Pustok_Project/Views/Shared/_Layout.cshtml
@@ -49,21 +49,15 @@
                                             shop
                                         </a>
                                     </li>
-                                    <!-- Pages -->
+                                    <!-- Cart -->
                                     <li class="menu-item">
                                         <a href="#">
-                                            Pages
-                                        </a>
-                                    </li>
-                                    <!-- Blog -->
-                                    <li class="menu-item">
-                                        <a href="#">
-                                            Blog
+                                            Cart
                                         </a>
                                     </li>
                                     <!-- Contact -->
                                     <li class="menu-item">
-                                        <a href="#">Contact</a>
+                                        <a asp-controller="contact" asp-action="index">Contact</a>
                                     </li>
                                     @if (User.IsInRole("Admin"))
                                     {
@@ -245,21 +239,15 @@
                                         shop
                                     </a>
                                 </li>
-                                <!-- Pages -->
+                                <!-- Cart -->
                                 <li class="menu-item">
                                     <a href="#">
-                                        Pages
-                                    </a>
-                                </li>
-                                <!-- Blog -->
-                                <li class="menu-item">
-                                    <a href="#">
-                                        Blog
+                                        Cart
                                     </a>
                                 </li>
                                 <!-- Contact -->
                                 <li class="menu-item">
-                                    <a href="#">Contact</a>
+                                    <a asp-controller="contact" asp-action="index">Contact</a>
                                 </li>
                                 @if (User.IsInRole("Admin"))
                                 {
@@ -344,21 +332,15 @@
                                         shop
                                     </a>
                                 </li>
-                                <!-- Pages -->
+                                <!-- Cart -->
                                 <li class="menu-item">
                                     <a href="#">
-                                        Pages
-                                    </a>
-                                </li>
-                                <!-- Blog -->
-                                <li class="menu-item">
-                                    <a href="#">
-                                        Blog
+                                        Cart
                                     </a>
                                 </li>
                                 <!-- Contact -->
                                 <li class="menu-item">
-                                    <a href="#">Contact</a>
+                                    <a asp-controller="contact" asp-action="index">Contact</a>
                                 </li>
                                 @if (User.IsInRole("Admin"))
                                 {
