Working on Product Index pagination

--- a/Pustok_Project/Views/Home/Index.cshtml
+++ b/Pustok_Project/Views/Home/Index.cshtml
@@ -163,7 +163,7 @@ Home Slider Tab
                 <li class="nav-item">
                     <a class="nav-link" id="woman-tab" data-toggle="tab" href="#woman" role="tab"
                        aria-controls="woman" aria-selected="false">
-                        Most Viewed products
+                        Featured products
                     </a>
                     <span class="arrow-icon"></span>
                 </li>
