--- a/Pustok_Project/Views/Shared/_Layout.cshtml
+++ b/Pustok_Project/Views/Shared/_Layout.cshtml
@@ -45,8 +45,8 @@
                                     </li>
                                     <!-- Shop -->
                                     <li class="menu-item">
-                                        <a href="#">
-                                            shop
+                                        <a asp-controller="product" asp-action="index">
+                                            Shop
                                         </a>
                                     </li>
                                     <!-- Cart -->
@@ -235,8 +235,8 @@
                                 </li>
                                 <!-- Shop -->
                                 <li class="menu-item">
-                                    <a href="#">
-                                        shop
+                                    <a asp-controller="product" asp-action="index">
+                                        Shop
                                     </a>
                                 </li>
                                 <!-- Cart -->
@@ -328,8 +328,8 @@
                                 </li>
                                 <!-- Shop -->
                                 <li class="menu-item">
-                                    <a href="#">
-                                        shop
+                                    <a asp-controller="product" asp-action="index">
+                                        Shop
                                     </a>
                                 </li>
                                 <!-- Cart -->
