--- a/Pustok_Project/Views/Shared/Components/CategoryProduct/Default.cshtml
+++ b/Pustok_Project/Views/Shared/Components/CategoryProduct/Default.cshtml
@@ -23,7 +23,7 @@
             <div class="product-card">
                 <div class="product-header">
                     <h3>
-                        <a href="#">
+                        <a asp-controller="product" asp-action="detail" asp-route-id="@product.Id">
                             @product.Name
                         </a>
                     </h3>
@@ -32,7 +32,7 @@
                     <div class="card-image">
                         <img src="~/client/assets/image/productss/@product.ProductImages!.FirstOrDefault(x=> x.IsMain)!.Url" alt="">
                         <div class="hover-contents">
-                            <a href="#" class="hover-image">
+                            <a asp-controller="product" asp-action="detail" asp-route-id="@product.Id" class="hover-image">
                                 <img src="~/client/assets/image/productss/@product.ProductImages!.FirstOrDefault(x=> x.IsHover)!.Url" alt="">
                             </a>
                             <div class="hover-btns">
