--- a/Pustok_Project/Views/Shared/Components/TypeProduct/Default.cshtml
+++ b/Pustok_Project/Views/Shared/Components/TypeProduct/Default.cshtml
@@ -11,7 +11,7 @@
             </div>
             <div class="product-card--body">
                 <div class="product-header">
-                    <h3><a href="#">@product.Name</a></h3>
+                    <h3><a asp-controller="product" asp-action="detail" asp-route-id="@product.Id">@product.Name</a></h3>
                 </div>
                 <div class="price-block">
                     @if (product.DiscountPrice != 0 && product.Price != product.DiscountPrice)
