--- a/Pustok_Project/Views/Shared/_ProductPartial.cshtml
+++ b/Pustok_Project/Views/Shared/_ProductPartial.cshtml
@@ -2,6 +2,7 @@
 @{
     double ratingPercentage = 0;
 }
+
 <main class="inner-page-sec-padding-bottom">
     <div class="container">
         <div class="shop-toolbar mb--30">
@@ -254,25 +255,21 @@
             <div class="col-md-12">
                 <div class="pagination-block">
                     <ul class="pagination-btns flex-center">
-                        @if (Model.TotalPageCount != 0)
+                        @if (Model.CurrentPage != 1)
                         {
-
-                            @if (Model.CurrentPage != 1)
-                            {
-                                <li>
-                                    <a asp-controller="product" asp-action="index" asp-route-categoryId="@ViewData["CategoryId"]" asp-route-pageSize="@ViewData["PageSize"]" asp-route-page="@(Model.CurrentPage - 1)" class="single-btn prev-btn "><i class="zmdi zmdi-chevron-left"></i> </a>
-                                </li>
-                            }
-                            @for (int i = 1; i <= Model.TotalPageCount; i++)
-                            {
-                                <li class=@(Model.CurrentPage == i ? "active":"")><a asp-controller="product" asp-action="index" asp-route-pageSize="@ViewData["PageSize"]" asp-route-categoryId="@ViewData["CategoryId"]" asp-route-page="@i" class="single-btn">@i</a></li>
-                            }
-                            @if (Model.CurrentPage != Model.TotalPageCount)
-                            {
-                                <li>
-                                    <a asp-controller="product" asp-action="index" asp-route-pageSize="@ViewData["PageSize"]" asp-route-categoryId="@ViewData["CategoryId"]" asp-route-page="@(Model.CurrentPage + 1)" class="single-btn next-btn"><i class="zmdi zmdi-chevron-right"></i></a>
-                                </li>
-                            }
+                            <li>
+                                <a asp-controller="product" asp-action="index" asp-route-searchedName="@ViewData["SearchedName"]" asp-route-categoryId="@ViewData["CategoryId"]" asp-route-pageSize="@ViewData["PageSize"]" asp-route-page="@(Model.CurrentPage - 1)" class="single-btn prev-btn "><i class="zmdi zmdi-chevron-left"></i> </a>
+                            </li>
+                        }
+                        @for (int i = 1; i <= Model.TotalPageCount; i++)
+                        {
+                            <li class=@(Model.CurrentPage == i ? "active":"")><a asp-controller="product" asp-action="index" asp-route-searchedName="@ViewData["SearchedName"]" asp-route-pageSize="@ViewData["PageSize"]" asp-route-categoryId="@ViewData["CategoryId"]" asp-route-page="@i" class="single-btn">@i</a></li>
+                        }
+                        @if (Model.CurrentPage != Model.TotalPageCount)
+                        {
+                            <li>
+                                <a asp-controller="product" asp-action="index" asp-route-searchedName="@ViewData["SearchedName"]" asp-route-pageSize="@ViewData["PageSize"]" asp-route-categoryId="@ViewData["CategoryId"]" asp-route-page="@(Model.CurrentPage + 1)" class="single-btn next-btn"><i class="zmdi zmdi-chevron-right"></i></a>
+                            </li>
                         }
                     </ul>
                 </div>
