--- a/Pustok_Project/Views/Shared/_Layout.cshtml
+++ b/Pustok_Project/Views/Shared/_Layout.cshtml
@@ -51,7 +51,7 @@
                                     </li>
                                     <!-- Cart -->
                                     <li class="menu-item">
-                                        <a href="#">
+                                        <a asp-controller="cart" asp-action="index">
                                             Cart
                                         </a>
                                     </li>
@@ -114,49 +114,8 @@
                                             <a class="mr-2" asp-action="logout" asp-controller="account">Log Out</a>
                                         }
                                     </div>
-                                    <div class="cart-block">
-                                        <div class="cart-total">
-                                            <span class="text-number">
-                                                1
-                                            </span>
-                                            <span class="text-item">
-                                                Shopping Cart
-                                            </span>
-                                            <span class="price">
-                                                £0.00
-                                                <i class="fas fa-chevron-down"></i>
-                                            </span>
-                                        </div>
-                                        <div class="cart-dropdown-block">
-                                            <div class=" single-cart-block ">
-                                                <div class="cart-product">
-                                                    <a href="product-details.html" class="image">
-                                                        <img src="~/client/assets/image/products/cart-product-1.jpg" alt="">
-                                                    </a>
-                                                    <div class="content">
-                                                        <h3 class="title">
-                                                            <a href="product-details.html">
-                                                                Kodak PIXPRO
-                                                                Astro Zoom AZ421 16 MP
-                                                            </a>
-                                                        </h3>
-                                                        <p class="price"><span class="qty">1 ×</span> £87.34</p>
-                                                        <button class="cross-btn"><i class="fas fa-times"></i></button>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class=" single-cart-block ">
-                                                <div class="btn-block">
-                                                    <a href="cart.html" class="btn">
-                                                        View Cart <i class="fas fa-chevron-right"></i>
-                                                    </a>
-                                                    <a href="checkout.html" class="btn btn--primary">
-                                                        Check Out <i class="fas fa-chevron-right"></i>
-                                                    </a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    @* CART *@
+                                    @await Component.InvokeAsync("Cart")
                                 </div>
                             </div>
                         </div>
@@ -241,7 +200,7 @@
                                 </li>
                                 <!-- Cart -->
                                 <li class="menu-item">
-                                    <a href="#">
+                                    <a asp-controller="cart" asp-action="index">
                                         Cart
                                     </a>
                                 </li>
@@ -334,7 +293,7 @@
                                 </li>
                                 <!-- Cart -->
                                 <li class="menu-item">
-                                    <a href="#">
+                                    <a asp-controller="cart" asp-action="index">
                                         Cart
                                     </a>
                                 </li>
