--- a/Pustok_Project/Views/Shared/_ProductPartial.cshtml
+++ b/Pustok_Project/Views/Shared/_ProductPartial.cshtml
@@ -168,7 +168,7 @@
                                             <img src="~/client/assets/image/productss/@product.ProductImages.FirstOrDefault(x=>x.IsHover).Url" alt="">
                                         </a>
                                         <div class="hover-btns">
-                                            <a href="#" class="single-btn">
+                                            <a asp-controller="cart" asp-action="AddToCart" asp-route-id="@product.Id" class="single-btn">
                                                 <i class="fas fa-shopping-basket"></i>
                                             </a>
                                             <a href="#" class="single-btn">
@@ -240,9 +240,9 @@
                                     <span class="fas fa-star @(ratingPercentage<100?"":"star_on")"></span>
                                 </div>
                                 <div class="btn-block">
-                                    <a href="#" class="btn btn-outlined">Add To Cart</a>
+                                    <a asp-controller="cart" asp-action="AddToCart" asp-route-id="@product.Id" class="btn btn-outlined">Add To Cart</a>
                                     <a href="#" class="card-link"><i class="fas fa-heart"></i> Add To Wishlist</a>
-                                    <a href="#" class="card-link"><i class="fas fa-random"></i> Add To Cart</a>
+                                    <a asp-controller="cart" asp-action="AddToCart" asp-route-id="@product.Id" class="card-link"><i class="fas fa-random"></i> Add To Cart</a>
                                 </div>
                             </div>
                         </div>
